syntax = "proto3";

package pubsub;

option go_package = "./proto/pubsub";

// PubSub 服务定义
service PubSub {
  // 发布消息 - 客户端流式
  rpc Publish (stream PublishRequest) returns (PublishResponse);
  // 订阅消息 - 服务端流式
  rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse);
}

// 发布消息请求
message PublishRequest {
  string topic = 1;  // 主题
  string message = 2;  // 消息内容
}

// 发布消息响应
message PublishResponse {
  bool success = 1;  // 是否成功
  int32 message_count = 2;  // 成功发布的消息数量
}

// 订阅消息请求
message SubscribeRequest {
  string topic = 1;  // 主题
}

// 订阅消息响应
message SubscribeResponse {
  string message = 1;  // 收到的消息
}